[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = ["scripts/", "pymusas_models/"]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
no_strict_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
allow_untyped_globals = false
allow_redefinition = false
local_partial_types = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    'spacy.vocab',
    'wasabi.*',
    'srsly.*'
]
ignore_missing_imports = true


[tool.isort]
known_first_party = "pymusas_models"
known_third_party = [
    "spacy",
    "pymusas",
    "srsly",
    "wasabi",
]
force_sort_within_sections = true
multi_line_output = 3
use_parentheses = true
force_grid_wrap = 0
include_trailing_comma = true
lines_after_imports = 2
line_length = 119