[project]
name = "pymusas_models"
version = "0.2.0"
description = "Helper modules that are used to create PyMUSAS models"
authors = [
    { name = "UCREL Research Centre", email = "ucrel@lancaster.ac.uk" }
]
readme = {file = "README.md", content-type = "text/markdown"}
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["usas", "USAS", "UCREL", "ucrel", "semantics"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research"
]
requires-python = ">=3.10, <3.15"
dependencies = [
    "pymusas==0.4.0",
    "spacy>=3.1.4",
    "wasabi>=0.8.1,<1.2.0",
    "srsly>=2.4.1,<3.0",
    "typer>=0.3.0,<1.0.0",
    "catalogue>=2.0.6,<2.1.0",
    "thinc>=8.0.12,<8.4.0",
    "wheel>=0.45.1",
]

[project.urls]
Repository = "https://github.com/UCREL/pymusas-models"
Issues = "https://github.com/UCREL/pymusas-models/issues"

[project.scripts]
"pymusas-models" = "pymusas_models.__main__:app"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-name = "pymusas_models"
module-root = ""

[dependency-groups]
dev = [
    "coverage[toml]>=6.0.0",
    "flake8>=3.8",
    "isort>=6.0",
    "mypy>=1.12",
    "pytest>=6.0,!=7.1.0,!=8.1.0",
    "pytest-fixture-config>=1.8.0,<2.0.0",
    "pytest-shutil>=1.8.1,<2.0.0",
    "pytest-virtualenv>=1.8.1,<2.0.0",
    "fastcore>=1.7.2,<2.0.0",
    "ghapi>=0.1.20,<2.0.0",
]


[tool.isort]
known_first_party = "pymusas_models"
known_third_party = [
    "spacy",
    "pymusas",
    "srsly",
    "wasabi",
    "typer",
    "pytest_virtualenv",
    "pytest_fixture_config",
    "_pytest",
    "fastcore",
    "ghapi"
]
force_sort_within_sections = true
multi_line_output = 3
use_parentheses = true
force_grid_wrap = 0
include_trailing_comma = true
lines_after_imports = 2
line_length = 119


[tool.mypy]
files = ["pymusas_models/", "model_function_tests/", "model_creation_tests/", "model_release.py"]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
allow_untyped_globals = false
allow_redefinition = false
local_partial_types = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    'spacy.vocab',
    'wasabi.*',
    'srsly.*',
    'catalogue.*',
    'wheel.*',
    'pytest_virtualenv.*',
    'pytest_fixture_config.*',
    'fastcore.*',
    'ghapi.*'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "model_creation_tests",
    "model_function_tests"
]

[tool.coverage.run]
branch = true
source = [
    "pymusas_models"
]
command_line = "-m pytest --virtual-env-directory=./temp_venv --overwrite ./model_creation_tests"

[tool.coverage.report]
show_missing = true

[tool.coverage.json]
output = "coverage.json"

[tool.coverage.xml]
output = "coverage.xml"
