[metadata]
name = pymusas_models
version = attr:pymusas_models.__version__
author = UCREL Research Centre
author_email = ucrel@lancaster.ac.uk
description = Helper modules that are used to create PyMUSAS models
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
    LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
zip_safe = false
python_requires = >=3.7
install_requires =
    pymusas @ git+https://github.com/UCREL/pymusas.git@mwe#egg=pymusas
    mypy==0.910
    flake8>=3.8.0,<3.10.0
    isort>=5.5.4

[flake8]
ignore = E266, E501, W503, W293
max-line-length = 200
select = B,C,E,F,W,T4,B9
exclude =
    languages/
    models/
statistics = true
count = true
show_source = true