[metadata]
name = pymusas_models
version = attr:pymusas_models.__version__
author = UCREL Research Centre
author_email = ucrel@lancaster.ac.uk
description = Helper modules that are used to create PyMUSAS models
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
    LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
zip_safe = false
python_requires = >=3.7
install_requires =
    pymusas @ git+https://github.com/UCREL/pymusas.git@mwe#egg=pymusas

[options.packages.find]
exclude=
    model_creation_tests
    model_function_tests
    tests.*
    tests

[options.extras_require]
tests = 
    mypy==0.910
    flake8>=3.8.0,<3.10.0
    isort>=5.5.4
    pytest>=6.0.0
    pytest-virtualenv @ git+https://github.com/man-group/pytest-plugins.git@e07b520ed4c9809853631f0856736a6342a4fbae#subdirectory=pytest-virtualenv&egg=pytest-virtualenv
    setuptools>=42
    wheel

[options.entry_points]
console_scripts =
    pymusas-models = pymusas_models.__main__:app

[flake8]
ignore = E266, E501, W503, W293
max-line-length = 200
select = B,C,E,F,W,T4,B9
exclude =
    languages/
    models/
    temp_venv/
    build/
statistics = true
count = true
show_source = true